@@ -8,7 +8,8 @@ release 84.5
      remove superfluous run lanes
      assume all runs are RTA
  - perform runfolder name validation against the tracking db run record
-   rather than against xml feeds
+   rather than against xml feeds; allow for missing runfolder name if run
+   is pending
 
 release 84.4
  - to avoid the need to create deep directory hierarchy containing www-live
